--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(PropWare_FileWriter)
 add_subdirectory(PropWare_FullDuplexSerial)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
+add_subdirectory(PropWare_I2CSlave)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP2515)
