--- a/Examples/PropWare_I2CSlave/CMakeLists.txt
+++ b/Examples/PropWare_I2CSlave/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 find_package(PropWare REQUIRED)
 
-project(PropWareI2CSlave_Demo)
+project(I2CSlave_Demo)
 
-create_simple_executable(${PROJECT_NAME} PropWareI2CSlave_Demo.cpp)
+create_simple_executable(${PROJECT_NAME} I2CSlave_Demo.cpp)
