Fix CMake project name for MCP3xxx demo

--- a/Examples/PropWare_MCP3xxx/CMakeLists.txt
+++ b/Examples/PropWare_MCP3xxx/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 find_package(PropWare REQUIRED)
 
-project(MCPxxx_Demo)
+project(MCP3xxx_Demo)
 
 create_simple_executable(${PROJECT_NAME} MCP3xxx_Demo.cpp)
