--- a/external_libs/cog/CMakeLists.txt
+++ b/external_libs/cog/CMakeLists.txt
@@ -1,11 +1,7 @@
 set(MODEL cog)
 
-# WAV player need to be optimized for speed, not size
-set_source_files_properties("${SIMPLE_ROOT}/Audio/libwavplayer/wavplayer.c"
-    PROPERTIES COMPILE_FLAGS "-O3")
-
+parse_simpleide_project_files(Simple_${MODEL} "${SIMPLE_IDE_PROJECT_FILES}")
 create_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
-create_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
 create_library(LibPropelleruino_${MODEL} STATIC ${LIBPROPELLERUINO_OBJECTS})
 set_target_properties(Libpropeller_${MODEL} PROPERTIES OUTPUT_NAME Libpropeller)
 set_target_properties(Simple_${MODEL} PROPERTIES OUTPUT_NAME Simple)
