[Closes #128] Create MAX72xx family object

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_I2CSlave)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
+add_subdirectory(PropWare_MAX72xx)
 add_subdirectory(PropWare_MCP2515)
 add_subdirectory(PropWare_MCP3xxx)
 add_subdirectory(PropWare_MultiCogBlinky)
