[Closes #129] Create a new ADXL345 accelerometer object

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(GettingStarted)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(libPropelleruino_Blinky)
+add_subdirectory(PropWare_ADXL345)
 add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_BufferedUART)
 add_subdirectory(PropWare_Eeprom)
