--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(libPropelleruino_Blinky)
 add_subdirectory(PropWare_ADXL345)
 add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_BufferedUART)
+add_subdirectory(PropWare_DualPWM)
 add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_FileWriter)
