[#133] Fix data rate bit width

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(libPropelleruino_Blinky)
 add_subdirectory(PropWare_ADXL345)
 add_subdirectory(PropWare_Blinky)
+add_subdirectory(PropWare_BNO055)
 add_subdirectory(PropWare_BufferedUART)
 add_subdirectory(PropWare_DualPWM)
 add_subdirectory(PropWare_Eeprom)
