--- a/test/PropWare/CMakeLists.txt
+++ b/test/PropWare/CMakeLists.txt
@@ -1,19 +1,20 @@
 set(BOARD dna)
 set(MODEL cmm)
 
-create_test(sample_test             sample_test)
-create_test(pin_test                pin_test)
-create_test(fatfilereader_test      fatfilereader_test)
-create_test(fatfilewriter_test      fatfilewriter_test)
-create_test(fatfs_test              fatfs_test)
-create_test(sd_test                 sd_test)
-create_test(stringbuilder_test      stringbuilder_test)
-create_test(queue_test              queue_test)
-create_test(utility_test            utility_test)
-create_test(spi_test                spi_test)
-create_test(eeprom_test             eeprom_test)
-create_test(ping_test               ping_test)
-create_test(stepper_test            stepper_test)
+create_test(sample_test             sample_test.cpp)
+create_test(pin_test                pin_test.cpp)
+create_test(fatfilereader_test      fatfilereader_test.cpp)
+create_test(fatfilewriter_test      fatfilewriter_test.cpp)
+create_test(fatfs_test              fatfs_test.cpp)
+create_test(sd_test                 sd_test.cpp)
+create_test(stringbuilder_test      stringbuilder_test.cpp)
+create_test(queue_test              queue_test.cpp)
+create_test(utility_test            utility_test.cpp)
+create_test(spi_test                spi_test.cpp)
+create_test(eeprom_test             eeprom_test.cpp)
+create_test(ping_test               ping_test.cpp)
+create_test(stepper_test            stepper_test.cpp)
+create_test(i2c_test                i2c_test.cpp)
 
 set_tests_properties(
     sample_test
@@ -23,6 +24,7 @@ set_tests_properties(
     eeprom_test
     ping_test
     stepper_test
+    i2c_test
     PROPERTIES LABELS hardware-independent)
 
 install(FILES PropWareTests.h
