[Fixes #135] Remove the "pwcmake" directory from the installation
CMake is now installed directly under CMAKE_INSTALL_PREFIX and PropWare
is installed to CMAKE_INSTALL_PREFIX/share/PropWare

--- a/PropWare/models/cmm/CMakeLists.txt
+++ b/PropWare/models/cmm/CMakeLists.txt
@@ -4,6 +4,6 @@ set(TARGET PropWare_${MODEL})
 create_library(${TARGET} ${PROPWARE_SOURCES})
 set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME PropWare)
 install(TARGETS ${TARGET}
-    DESTINATION PropWare/lib/${MODEL}
+    DESTINATION share/PropWare/lib/${MODEL}
     COMPONENT propware
     EXPORT PropWare-targets)
