--- a/PropWare/models/xmmc/CMakeLists.txt
+++ b/PropWare/models/xmmc/CMakeLists.txt
@@ -4,6 +4,6 @@ set(TARGET PropWare_${MODEL})
 create_library(${TARGET} ${PROPWARE_SOURCES})
 set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME PropWare)
 install(TARGETS ${TARGET}
-    DESTINATION PropWare/lib/${MODEL}
+    DESTINATION share/PropWare/lib/${MODEL}
     COMPONENT propware
     EXPORT PropWare-targets)
