[#150, #151] Massive refactor of CMake things
* CMake binaries no longer packaged with PropWare
* Make use of transitive dependency information
* Add namespace to PropWare targets
* Reconfigure the folder structure of installed files
* Theoretically allow using PropWare's build system without libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,20 +20,13 @@ project(PropWare
     VERSION ${VERSION}
     LANGUAGES C CXX ASM COGC COGCXX ECOGC ECOGCXX DAT SPIN2DAT)
 
-add_subdirectory(external_libs) # Make sure this is first since it modifies the include directories needed later
-add_subdirectory(PropWare)
-add_subdirectory(Examples)
-add_subdirectory(test)
-
 option(PACKAGE_LINUX "Create complete package for Linux" OFF)
 option(PACKAGE_WIN32 "Create complete package for Windows" OFF)
 option(PACKAGE_OSX "Create complete package for Mac OSX" OFF)
 option(PACKAGE_PI2 "Create complete package for Raspberry Pi 2" OFF)
 
-include(ExternalProject)
-include(./DownloadCMakeBinaries.cmake)
+include(./PropWareSources.cmake)
 include(./DownloadSpin2cpp.cmake)
-
-include(./CMakePropWareInstall.cmake)
-include(./CMakeCPack.cmake)
+include(./PropWareInstall.cmake)
+include(./PropWareCPack.cmake)
 include(./DocumentationConfig.cmake)
