--- a/PropWare/models/xmmc/CMakeLists.txt
+++ b/PropWare/models/xmmc/CMakeLists.txt
@@ -1,9 +1,3 @@
-set(MODEL xmmc)
-
-set(TARGET PropWare_${MODEL})
-create_library(${TARGET} ${PROPWARE_SOURCES})
-set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME PropWare)
-install(TARGETS ${TARGET}
-    DESTINATION share/PropWare/lib/${MODEL}
-    COMPONENT propware
-    EXPORT PropWare-targets)
+create_pw_lib(LIB_NAME PropWare MODEL xmmc
+    EXTRA_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}"
+    SOURCES ${PROPWARE_SOURCES})
