--- a/site.yml
+++ b/site.yml
@@ -5,4 +5,4 @@ links:
   Forum Thread: http://forums.parallax.com/showthread.php/157005-FYI-PropWare-Complete-build-system-and-library-for-PropGCC
   Issue Tracker: https://github.com/parallaxinc/PropWare/issues
   Source Code: https://github.com/parallaxinc/PropWare
-  Build Server: http://david.zemon.name:8111/project.html?projectId=PropWare&tab=projectOverview&guest=1
+  Build Server: https://ci.zemon.name/project.html?projectId=PropWare&tab=projectOverview&guest=1
